--- a/xianziworld/aboutweb.html
+++ b/xianziworld/aboutweb.html
@@ -16,6 +16,7 @@
 			.top1{margin-top: auto;margin-left: auto;margin-right: auto;width: auto;height: 30px;/*background: url(img/ddbg.jpg) repeat scroll top left;*/}
 			#zit{font-family: "微软雅黑";font-weight: bold;}
 			.word1{
+				text-shadow: 5px 5px 5px grey;
 				margin-top: 70px;margin-left: auto;margin-right: auto;
 				width:350px;height: 60px;animation: myfirst 5s infinite;
 				-webkit-animation: myfirst 5s infinite;/*background-color: #E52C47;*/
