--- a/xianziworld/aboutweb.html
+++ b/xianziworld/aboutweb.html
@@ -30,8 +30,12 @@
 				height: auto;/*background-color: #1362B7;*/
 			}
 			.word4{
-				margin: auto;margin-left: auto;margin-right: auto;width: 90px;
+				margin: auto;margin-left: auto;margin-right: auto;width: 100px;
 				height: auto;/*background-color: #28A9E0;*/
+			}
+			.word5{
+				margin: auto;margin-left: auto;margin-right: auto;width: 100px;
+				height: auto;background-color: #28A9E0;
 			}
 			@keyframes myfirst{
 				from{color: #28A9E0;}
@@ -60,8 +64,10 @@
 		<div class="top1"></div>
 		<div class="word1"><center><font size="7">关于馅子World</font></center></div>
 		<div class="word2"><center><font size="2" color="#AA229D">本网站设计开发均为馅子团队</font></center></div>
-		<div class="word3"><center><img src="img/qq.png" width="13px" height="13px"><font size="2" color="brown">1426859278</font></center></div>
+		<div class="word3"><center><img src="img/qq.png" width="13px" height="13px"><font size="2" color="brown">1426859278</font></center></div><br>
 		<div class="word4"><center><img src="img/weixin.jpg" width="14px" height="14px"><font size="2" color="brown">yingshang136</font></center></div>
+		<div class="word5"></div>
+		
 		<!--<div class="word5"><center><img src="img/lemlam.jpg" width="50%" height="50%"></center></div>-->
 	</body>
 </html>
