--- a/xianziworld/aboutweb.html
+++ b/xianziworld/aboutweb.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>关于本站---馅子World</title>
 		<style>
-			<!--	body { margin: 0px;padding: 0px;text-align: center;background: url(img/bgp.jpg); top center no-repeat; background-size:cover auto;}
+			<!--	body {  margin: 0px;padding: 0px;text-align: center;background: url(img/bgp.jpg); top center no-repeat; background-size: auto 120%;}
     				TD {FONT-SIZE: 12px; COLOR: #333;}
     				#toubiao {BORDER-BOTTOM: #e2e2e2 1px solid;/*background-color: #3DBEA0;*/}
     				a{text-decoration:none;}
@@ -25,7 +25,7 @@
 				margin-top: 100px;margin-left:auto;margin-right: auto;width:110px;
 				height: auto;/*background-color: #1362B7;*/
 			}
-			.word3{
+			.word5{
 				margin-top: 60px;margin-left: auto;margin-right: auto;width: 100px;
 				height: auto;/*background-color: #1362B7;*/
 			}
@@ -33,9 +33,9 @@
 				margin: auto;margin-left: auto;margin-right: auto;width: 100px;
 				height: auto;/*background-color: #28A9E0;*/
 			}
-			.word5{
-				margin: auto;margin-left: auto;margin-right: auto;width: 100px;
-				height: auto;background-color: #28A9E0;
+			.word3{
+				margin-top: 150px;margin-left: auto;margin-right: auto;width: 500px;
+				height: auto;/*background-color: #28A9E0;*/
 			}
 			@keyframes myfirst{
 				from{color: #28A9E0;}
@@ -55,7 +55,7 @@
     	<div id=toubiao>
     		<table width="100%" border="0" cellspacing="0" cellpadding="0">
     		<tr>
-    			<td width="4%" height="30" align="center"><img src="" width="20px" height="20px"></td><!--logo图片(其他广告)-->
+    			<td width="4%" height="30" align="center"><img src="img/a.png" width="50px"></td>
     			<td width="82%"><font color="#666666"><a href="index.html">馅子World</a>&nbsp;&nbsp;&nbsp;一个免费小说漫画共享平台，不为熟悉的我，只为陌生的你。</font></td>
     			<td width="14%" align="right"><a style="CURSOR: hand" onClick=toueme()><img src="http://www.codefans.net/jscss/demoimg/201106/close.gif" width=84 height=11 hspace="6" border=0></a></td>
     		</tr>
@@ -64,9 +64,9 @@
 		<div class="top1"></div>
 		<div class="word1"><center><font size="7">关于馅子World</font></center></div>
 		<div class="word2"><center><font size="2" color="#AA229D">本网站设计开发均为馅子团队</font></center></div>
-		<div class="word3"><center><img src="img/qq.png" width="13px" height="13px"><font size="2" color="brown">1426859278</font></center></div><br>
-		<div class="word4"><center><img src="img/weixin.jpg" width="14px" height="14px"><font size="2" color="brown">yingshang136</font></center></div>
-		<div class="word5"></div>
+		<!--<div class="word3"><center><img src="img/qq.png" width="13px" height="13px"><font size="2" color="brown">1426859278</font></center></div><br>
+		<div class="word4"><center><img src="img/weixin.jpg" width="14px" height="14px"><font size="2" color="brown">yingshang136</font></center></div>-->
+		<div class="word3"><img src="img/b.png" width="100%" height="100%"></div>
 		
 		<!--<div class="word5"><center><img src="img/lemlam.jpg" width="50%" height="50%"></center></div>-->
 	</body>
