--- a/xianziworld/index.html
+++ b/xianziworld/index.html
@@ -115,7 +115,7 @@
 			<a href=""><font size="4">个人中心</font></a>
 		</div>
 		<div class="CirItem CirItem9">
-			<a href=""><font size="4">联系客服</font></a>
+			<a href="https://jq.qq.com/?_wv=1027&k=54l1vLW"><font size="4">加入QQ群</font></a>
 		</div>
 		<div class="CirItem CirItem10">
 			<a href="aboutweb.html"><font size="4">关于本站</font></a>
