--- a/xianziworld/index.html
+++ b/xianziworld/index.html
@@ -112,7 +112,7 @@
 			<a href="otherhtml/fenxiang.html"><font size="4">分享本站</font></a>
 		</div>
 		<div class="CirItem CirItem8">
-			<a href=""><font size="4">个人中心</font></a>
+			<a href="otherhtml/center.php"><font size="4">个人中心</font></a>
 		</div>
 		<div class="CirItem CirItem9">
 			<a href="https://jq.qq.com/?_wv=1027&k=54l1vLW"><font size="4">加入QQ群</font></a>
