--- a/xianziworld/tougao/click.html
+++ b/xianziworld/tougao/click.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>(0.0)</title>
 		<link rel="stylesheet" type="text/css" href="css/try.css"/>
 	</head>
 	<body>
