--- a/xianziworld/tougao/index.html
+++ b/xianziworld/tougao/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>投稿</title>
         <style>
         	.g1{font-size:20px;}
 			a:link {font-size: 15px; color:#474747; text-decoration: none; } a:visited { font-size: 15px; color:#474747; text-decoration: none; } a:hover { font-size: 15px; color: #36648B; text-decoration: none; } 
