--- a/xianziworld/tougao/xieyi.html
+++ b/xianziworld/tougao/xieyi.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>XianziWorld</title>
 		<link rel="stylesheet" href="css/xy.css" />
 	</head>
 	<body>
